test-cases/func_no_types.exp
Error detected during checking parameter type declarations in modules func_no_types
test-cases/func_no_types.wybe:1:8: Public proc 'double' with undeclared parameter or return type
test-cases/func_no_types.wybe:1:8: Public proc 'double' with undeclared parameter or return type
