test-cases/func_no_types.wybe
public def double(a) = a*2
